Fix services title size on mobile

--- a/src/portfolio/scss/components/_services-modal.scss
+++ b/src/portfolio/scss/components/_services-modal.scss
@@ -45,8 +45,8 @@
   margin-bottom: -20px;
 
   @media (max-width: $breakpoint-tablet) {
-    font-size: 48px;
-    margin-bottom: -12px;
+    font-size: 36px;
+    margin-bottom: -10px;
   }
 }
 
